# nrf52840-dongle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_upload.sh  hex-edit.sh  nrf-con.py  nrf52840dongle_nrf52840.overlay  prj.conf  requirements.txt
extras/: nrf-con.py  red-node-flow.json
src/: common.h  main.c
src/remote_service/: remote.c  remote.h
src/rtc/: PCF8563.c  PCF8563.h
src/tmp102/: tmp102.c  tmp102.h
src/user_peripherial/: adc.c  adc.h  i2c.c  i2c.h
